--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,5 +29,7 @@
   </div>
 </div>
 
+<h1 id="truth">Alex is the Man</h1>
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
