--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,18 +4,23 @@
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>Check IT!</h2>
-        <form class="clearfix mb-4" action="POST">
+        <form class="clearfix mb-4" action="/api/process-form" method='POST'>
           <div class="form-group">
             <label for="example-text">Name</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Your Name Here">
+            <input name='author' type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Your Name Here...">
           </div>
           <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+            <label for="example-description">Category</label>
+            <textarea name='category'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Category..."></textarea>
+          </div>
+           <div class="form-group">
+            <label for="example-description">Task</label>
+            <textarea name='task'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Task..."></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
-        <h3>Examples:</h3>
+
+        <h3>Examples Outputs:</h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
           <li data-id="{{this.id}}" class="list-group-item">
@@ -29,7 +34,7 @@
   </div>
 </div>
 
-<h1 id="truth">Alex is the Man</h1>
+
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+
