--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,13 +20,12 @@
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
 
-        <h3>Examples Outputs:</h3>
+        <h3>My to-do list:</h3>
         <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
+          {{#each todo}}
+          <li>{{this}}</li>
+          
+          
           {{/each}}
         </ul>
       </div>
