--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,10 @@
-<div id="home">
+<div id="List">
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>Check IT!</h2>
-        <form class="clearfix mb-4" action="/api/process-form" method='POST'>
-          <div class="form-group">
-            <label for="example-text">Name</label>
-            <input name='author' type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Your Name Here...">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Category</label>
-            <textarea name='category'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Category..."></textarea>
-          </div>
-            <div class="form-group">
-            <label for="example-description">Name</label>
-            <textarea name='category'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Category..."></textarea>
-          </div>
-           <div class="form-group">
-            <label for="example-description">Task Description</label>
-            <textarea name='task'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Task..."></textarea>
-          </div>
-            <div class="form-group">
-            <label for="example-description">Due Date</label>
-            <textarea name='task'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Task..."></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
+
 
         <h3>My to-do list:</h3>
         <ul id="task-list" class="list-group">
@@ -43,7 +21,7 @@
   </div>
 </div>
 
-
+<a href="/">← Back To Home</a>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
