--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,10 +5,10 @@
         <h1>{{msg}}</h1>
         <h2>Check IT!</h2>
 
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+          {{!-- <button id="submit" class="btn btn-primary float-right">Submit</button>
 
-            <button class="btn btn-danger float-right delete">ｘ</button>
-    
+            <button class="btn btn-danger float-right delete">ｘ</button> --}}
+          This is home
       </div>
     </div>
   </div>
