--- a/views/addForm.handlebars
+++ b/views/addForm.handlebars
@@ -2,17 +2,17 @@
 
         </div>
         <form class="clearfix mb-4" action="/api/tasks" method='POST'>
-          {{!-- <div class="form-group">
-            <label for="example-text">Name</label>
+          <div class="form-group">
+            <label for="author-name">Name</label>
             <input name='author' type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Your Name Here...">
           </div>
           <div class="form-group">
-            <label for="example-description">Category</label>
-            <textarea name='category'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Category..."></textarea>
-          </div> --}}
+            <label for="name">Category</label>
+            <textarea name='type'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Category..."></textarea>
+          </div>
             <div class="form-group">
             <label for="example-description">Task Name</label>
-            <textarea name='task-name'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Title..."></textarea>
+            <textarea name='name'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Title..."></textarea>
           </div>
            <div class="form-group">
             <label for="example-description">Task Description</label>
@@ -20,7 +20,7 @@
           </div>
             <div class="form-group">
             <label for="example-description">Due Date</label>
-            <textarea name='due-date'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Task..."></textarea>
+            <textarea name='due'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Task..."></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
