--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,10 @@
 <body>
   {{{body}}}
   
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+  <script> href='js/index.js' </script>
 </body>
 
 </html>
