--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,16 +3,40 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>Check IT!</h2>
+        
+        {{!-- <h2>Check IT!</h2>
 
-          {{!-- <button id="submit" class="btn btn-primary float-right">Submit</button>
+          <button id="submit" class="btn btn-primary float-right">Submit</button>
 
-            <button class="btn btn-danger float-right delete">ｘ</button> --}}
-          This is home
+            <button class="btn btn-danger float-right delete">ｘ</button>
+          This is home --}}
+<div class="card mt-4">
+        <div class="card-body">
+          
+<ul class="nav justify-content-end">
+
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Check IT!</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/addTask"><strong>Create Your List</strong></a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/task"><strong>Go To Your List</strong></a>
+  </li>
+
+</ul>
+
       </div>
     </div>
   </div>
 </div>
+ </div>
+</div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
+
+
