--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -15,7 +15,7 @@ body {
 }
 
 #home-input{
-    width:300px;
+    width:240px;
     height:34px;
 }
 
@@ -39,7 +39,7 @@ body {
 .row {
    color:white;
     position:absolute;
-    top:350px;
+    top:400px;
     
 
 }
@@ -48,5 +48,10 @@ body {
     font:white;
 
     
+}
+
+#brand-name {
+    font-family: 'Righteous', cursive;
+    font-size: 25px;
 }
 
