--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,6 +2,7 @@
 <html>
 
 <script src="https://unpkg.com/eva-icons"></script>
+<link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
 
 <body>
 <iframe id="background-vid" src="https://www.youtube-nocookie.com/embed/26U_seo0a1g?start=235&modestbranding=0&showinfo=0&rel=0&iv_load_policy=3&theme=light&fs=0&autohide=1&controls=0&disablekb=0&autoplay=1&mute=1&loop=1" allow="autoplay" width="100%" height="400" frameborder="0"></iframe>
@@ -9,10 +10,10 @@
 
 <nav class="navbar navbar-light bg-light justify-content-between">
   <a class="navbar-brand" id='brand-name'>ResponsibiliTeen</a>
-  <i data-eva="home" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i>
-  <i data-eva="plus-circle-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i>
-  <i data-eva="calendar-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i>
-  <i data-eva="alert-circle-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i>
+  <button><i data-eva="home" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i></button>
+  <button action="/api/process-form" type="submit"><i data-eva="plus-circle-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i></button>
+  <button><i data-eva="calendar-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i></button>
+  <button><i data-eva="alert-circle-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i></button>
 
 
   <form class="form-inline">
