--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,29 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/{{style}}" media="screen" title="no title" charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet">
 
  
-  <title>Check IT!</title>
+  <title>CheckIt!</title>
+
+  <style>
+    h2{
+      text-align: left ;
+      font-family: 'Racing Sans One', cursive;
+      font-size: 30px;
+      color: #3C6B82;
+    }
+</style>
 </head>
 
+
+
 <body>
+
   {{{body}}}
   
 </body>
+<footer>
 
+</footer>
 </html>
