--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,40 +1,33 @@
 <div id="home">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Check IT!</a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+
+    <ul class="navbar-nav">
+
+
+      <li class="nav-item">
+        <a class="nav-link" href="/addTask">Create Your List</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/task">Go To Your List</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
+
         
-        {{!-- <h2>Check IT!</h2>
-
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          This is home --}}
-<div class="card mt-4">
-        <div class="card-body">
-          
-<ul class="nav justify-content-end">
-
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Check IT!</a>
-  </li>
-
-  <li class="nav-item">
-    <a class="nav-link" href="/addTask"><strong>Create Your List</strong></a>
-  </li>
-
-  <li class="nav-item">
-    <a class="nav-link" href="/task"><strong>Go To Your List</strong></a>
-  </li>
-
-</ul>
-
-      </div>
-    </div>
-  </div>
-</div>
- </div>
-</div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
