--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,32 @@
 <div id="List">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Check IT!</a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+
+    <ul class="navbar-nav">
+
+
+      <li class="nav-item">
+        <a class="nav-link" href="/addTask">Create Your List</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/task">Go To Your List</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
+
         <h2>Check IT!</h2>
 
 
@@ -21,7 +45,19 @@
   </div>
 </div>
 
-<a href="/">← Back To Home</a>
+{{!-- BOTTOM --}}
+<nav class="navbar navbar-expand-lg fixed-bottom navbar-light">
+  {{!-- <a class="navbar-brand" href="#">Fixed bottom</a> --}}
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">← Back To Home</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/task">← See your list</a>
+      </li>
+    </ul>
+</nav>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
