--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,3 @@
-
-
 <div id="List">
   <div class="container">
     <div class="row">
@@ -8,24 +6,25 @@
         <h2>CheckIt!</h2>
         <hr>
         <h3>My Task List:</h3>
+        {{#each toDoList}}
           <div class="card" style="">
             <div class="card-body">
               {{!-- <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> --}}
                 <ul id="task-list" class="list-group">
-
-                {{#each toDoList}}
                 <li>{{name}}</li>
+                <li>{{type}}</li>
+                <li>{{title}}</li>
                 <li>{{description}}</li>
                 <li>{{due}}</li>
                 <li>{{completed}}</li>
-                
-                {{/each}}
               </ul>
               {{!-- <a href="#" class="card-link">Card link</a>
               <a href="#" class="card-link">Another link</a> --}}
+              <button id="delete" type="button" class="btn btn-danger">X</button>
             </div>
           </div>
+        {{/each}}
       </div>
     </div>
   </div>
@@ -35,5 +34,6 @@
 <a href="/addTask">Add a Task</a>  
 </footer>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
 
