--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles/{{style}}" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
  
   <title>CheckIt!</title>
@@ -28,10 +29,14 @@
   
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
-  <script> href='js/index.js' </script>
-</body>
+
 <footer>
 
 </footer>
+  <!-- Custom Script -->
+<script src="js/index.js" type="text/javascript"></script>
+
+</body>
+
+
 </html>
