worked out post and delete task functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,11 +17,10 @@
                 <li>{{title}}</li>
                 <li>{{description}}</li>
                 <li>{{due}}</li>
-                <li>{{completed}}</li>
+                <button id="{{id}}" type="button" class="btn btn-danger delete">X</button>
               </ul>
               {{!-- <a href="#" class="card-link">Card link</a>
               <a href="#" class="card-link">Another link</a> --}}
-              <button id="delete" type="button" class="btn btn-danger delete">X</button>
             </div>
           </div>
         {{/each}}
