--- a/views/addForm.handlebars
+++ b/views/addForm.handlebars
@@ -12,19 +12,19 @@
     </div>
     <div class="form-group">
       <label for="category">Category</label>
-      <input name='type'class="form-control" id="category-description" aria-describedby="example-description" placeholder="Enter Category for your task..."></textarea>
+      <input name='type'class="form-control" id="category-description" aria-describedby="example-description" placeholder="Enter Category for your task...">
     </div>
       <div class="form-group">
       <label for="example-description">Task Name</label>
-      <input name='title'class="form-control" id="title-description" aria-describedby="example-description" placeholder="Enter Title..."></textarea>
+      <input name='title'class="form-control" id="title-description" aria-describedby="example-description" placeholder="Enter Title...">
     </div>
       <div class="form-group">
-      <label for="example-description">Task Description</label>
+      <label for="to-do-description">Task Description</label>
       <textarea name='description'class="form-control" id="task-description" aria-describedby="example-description" placeholder="Describe Your Task..."></textarea>
     </div>
       <div class="form-group">
-      <label for="example-description">Due Date</label>
-      <textarea name='due'class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Task Due Date..."></textarea>
+      <label for="due-date-description">Due Date</label>
+      <input type="date" name='due'class="form-control" id="date-description" aria-describedby="example-description" placeholder="Enter Task Due Date...">
     </div>
     <button id="submit" class="btn btn-primary float-right">Submit</button>
   </form>
