--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,4 +1,136 @@
-#background-vid {
+/* COMMECTED TO home.handlebars */
+
+
+body{
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #1da1f2;
+    color: #ffffff;
+    font-size: 1.2em;
+    line-height: 1.5;
+    text-align: center;
+}
+
+img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+h1, h4, h3{
+    margin: 0px;
+    padding: 1em 0em;
+}
+
+p{
+    margin: 0px;
+    padding: 1em 0em;
+}
+
+.btn{
+    display: inline-block;
+    background:#1da1f2;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 1em 2em;
+    border: 1px solid #ffffff;
+    margin: 0.5em 0;
+}
+
+.btn:hover{
+    background: #0f69a1;
+    color: #ffffff;
+    border: 1px solid #0f69a1;
+}
+
+/* HEADER */
+
+#showcase{
+min-height: 300px;
+color: #ffffff;
+text-align: center;
+}
+
+#showcase .bg-image{
+    position: absolute;
+    background: #1da1f2 url("https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?cs=srgb&dl=notes-sticky-notes-sunlight-1629212.jpg&fm=jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 300px;
+    z-index: -1;
+    opacity: 0.7;
+}
+
+#showcase h1 {
+    padding-top: 50px;
+    padding-bottom: 0px;
+}
+
+.showcase .content-wrap {
+    padding: 0 1.5em;
+}
+
+/* SECTION A */
+#section-a{
+    background: #ffffff;
+    color: #1da1f2;
+    padding: 0 1.5em;
+}
+
+/* SECTION B */
+#section-b{
+    background: #ffffff;
+    color: #1da1f2;
+    padding: 2em 1em 1em;
+}
+
+#section-b ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#section-b li{
+    margin-bottom: 1em;
+    background: #ffffff;
+    color: #1da1f2;
+}
+
+.card-content{
+    padding: 1.5em;
+}
+
+/* SECTION D/ BOXES */
+#section-d .box{
+    padding: 2em;
+    color: #ffffff;
+}
+
+#section-d .box :first-child{
+    background:#0f69a1;
+}
+
+/* SECTION FOOTER */
+
+#main-footer{
+    padding: 2em;
+    color: #ffffff;
+    background: #0f69a1;
+    text-align: center;
+}
+
+/* MEADIA QUALRIES */
+
+@media(min-width: 700px){
+    body{display: none;}
+
+}
+
+
+
+/* #background-vid {
     zoom: 1.00;
     position:relative;
     bottom:50px;
@@ -59,5 +191,5 @@ body {
 #brand-name {
     font-family: 'Righteous', cursive;
     font-size: 25px;
-}
+} */
 
