--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,5 @@
-.list-group-item {
+
+/* .list-group-item {
   line-height: 2.5;
 }
 
@@ -7,4 +8,4 @@ h2 {
   font-family: 'Racing Sans One', cursive;
   font-size: 30px;
   color: #3C6B82;
-}
+} */
