--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,8 +23,8 @@
     h2{
       text-align: left ;
       font-family: 'Racing Sans One', cursive;
-      font-size: 30px;
-      color: #3C6B82;
+      font-size: 2.5rem;
+      color: #1da1f2;
     }
 </style>
 </head>
