--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -11,11 +11,11 @@ body{
     text-align: center;
 }
 
-img{
+/* img{
     display: block;
     width: 100%;
     height: auto;
-}
+} */
 
 h1, h4, h3{
     margin: 0px;
@@ -27,108 +27,135 @@ p{
     padding: 1em 0em;
 }
 
-.btn{
+.navbar{
+    background-color: #ffffff;
+    position: sticky;
+    box-shadow: 25px 25px 50px rgb(0,0,0,0.5);  
+    justify-content: right;
+}
+
+.nav-link{
+    padding: 0px 55px;
+}
+
+.eva{
+    fill:#ffffff;
+    box-shadow: 25px 25px 50px rgb(0,0,0,0.5);
+    border-radius: 7px;
+    height: 60px;
+    width: 60px;
+    background:#1da1f2;
+    border: 1px solid #0f69a1;
+    float: right;
+}
+
+#link1{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+#link2{
+    text-decoration: none;
+    color: #1da1f2;
+}
+
+.btn1{
     display: inline-block;
     background:#1da1f2;
     color: #ffffff;
     text-decoration: none;
-    padding: 1em 2em;
-    border: 1px solid #ffffff;
+    padding: 0.5em 0em;
+    border: 2px solid #0f69a1;
     margin: 0.5em 0;
+    border-radius: 25px;
+    text-align: center;
+    display: inline-block;
+    box-shadow: 25px 25px 50px rgb(0,0,0,0.5);
+    
 }
 
-.btn:hover{
+.btn1:hover{
     background: #0f69a1;
     color: #ffffff;
-    border: 1px solid #0f69a1;
+    border: 2px solid #0f69a1;
 }
 
-/* HEADER */
 
-#showcase{
-min-height: 300px;
-color: #ffffff;
-text-align: center;
-}
-
-#showcase .bg-image{
-    position: absolute;
-    background: #1da1f2 url("https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?cs=srgb&dl=notes-sticky-notes-sunlight-1629212.jpg&fm=jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 300px;
-    z-index: -1;
-    opacity: 0.7;
-}
-
-#showcase h1 {
-    padding-top: 50px;
-    padding-bottom: 0px;
-}
-
-.showcase .content-wrap {
-    padding: 0 1.5em;
-}
-
-/* SECTION A */
-#section-a{
-    background: #ffffff;
+.btn2{
+    display: inline-block;
+    background:#ffffff;
     color: #1da1f2;
-    padding: 0 1.5em;
+    padding: 0.5em 0em;
+    border: 2px solid #1da1f2;
+    margin: 0.5em 0;
+    border-radius: 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    box-shadow: 25px 25px 50px rgb(0,0,0,0.5);
 }
 
-/* SECTION B */
-#section-b{
-    background: #ffffff;
-    color: #1da1f2;
-    padding: 2em 1em 1em;
+.btn2:hover{
+    background: #cae8fa;
+    color: #0f69a1;
+    border: 2px solid #1da1f2;
 }
 
-#section-b ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
 
-#section-b li{
-    margin-bottom: 1em;
-    background: #ffffff;
-    color: #1da1f2;
-}
 
-.card-content{
-    padding: 1.5em;
-}
-
-/* SECTION D/ BOXES */
-#section-d .box{
+.box1{
     padding: 2em;
     color: #ffffff;
+    background-color: #1da1f2;
 }
 
-#section-d .box :first-child{
-    background:#0f69a1;
+.box2{
+    background-color: #ffffff;
+    color: #1da1f2;
 }
+
+
 
 /* SECTION FOOTER */
 
 #main-footer{
     padding: 2em;
     color: #ffffff;
-    background: #0f69a1;
+    background: #1da1f2;
     text-align: center;
+    position: relative;
+    font-size: 0.5em;
+    box-shadow: 25px 25px 50px rgb(0,0,0,0.5);
+
+
+    position: absolute;
+    background: #1da1f2 url("https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?cs=srgb&dl=notes-sticky-notes-sunlight-1629212.jpg&fm=jpg");
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 150px;
+    z-index: -1;
+    opacity: 0.7;
+    background-size: 100%;
+    
+    
+  
 }
 
 /* MEADIA QUALRIES */
 
-@media(min-width: 700px){
-    body{display: none;}
+@media screen and (min-width: 768px) {
+    /* The body's bg color will be #333 */
+    .grid {
+      display: grid;
+      grid-template-columns: 2fr 2fr;
+    }
 
-}
 
 
+
+    /* ////////OLD CODE///////////////////////////// */
 
 /* #background-vid {
     zoom: 1.00;
