chages to master

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,20 +7,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-<<<<<<< HEAD
 
   <link rel="stylesheet" href="styles/{{style}}" media="screen" title="no title" charset="utf-8">
 
   <link rel="stylesheet" href="../public/styles">
 
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet">
+  {{!-- eva icon --}}
   <script src="https://unpkg.com/eva-icons"></script>
-<link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
-=======
+{{!-- <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet"> --}}
+
+{{!-- css stylesheet --}}
   <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet">
+
+ {{!-- jquery --}}
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
->>>>>>> 84ba30376912cf8257737378aa18542267e354cc
 
  
   <title>CheckIt!</title>
