changes to home page verbiage

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -31,9 +31,9 @@
   <section id="section-d" class="grid">
 
     <div class="box1">
-      <h3 class="content-title">Log in, add a tack, set a date and no more hassle in organizing your workflow.
+      <h3 class="content-title">Add a task, set a date and no more hassle in organizing your workflow.
 Keep all the tasks in one place with no paper cuts. View them at any time.
-And when you are done just CheckIt!</h3>
+When you are done just... CheckIt!</h3>
  
       <p></p>
     </div>
