cleaned up nav bar on index and addForm views

--- a/views/addForm.handlebars
+++ b/views/addForm.handlebars
@@ -1,6 +1,6 @@
 <div id="home">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Check IT!</a>
+  <a class="navbar-brand" href="/"><h2>CheckIt!</h2></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,7 @@
         {{!-- NAVBAR --}}
 
 <div class="container">
-<section>
-   <h2>CheckIt!</h2>
-</section>
-<hr>
+
         
   <form class="clearfix mb-4" action="/api/tasks" method='POST'>
     <div class="form-group">
@@ -67,18 +64,15 @@
   {{!-- <a class="navbar-brand" href="#">Fixed bottom</a> --}}
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/">← Back To Home</a>
+        <a class="nav-link" href="/">Back To Home</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/task">← See your list</a>
+        <a class="nav-link" href="/task">See your list</a>
       </li>
     </ul>
 </nav>
 </div>
 </div>
 <footer>
-<a href="/">Back To Home</a>
- | 
-<a href="/task">See your list</a>
 </footer>
