--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div id="List">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Check IT!</a>
+  <a class="navbar-brand" href="/"><h2>Check It!</h2></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -26,9 +26,6 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-
-        <h2>Check IT!</h2>
-        <h2>CheckIt!</h2>
         <hr>
         <h3>My Task List:</h3>
         {{#each toDoList}}
@@ -59,17 +56,15 @@
   {{!-- <a class="navbar-brand" href="#">Fixed bottom</a> --}}
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/">← Back To Home</a>
+        <a class="nav-link" href="/">Back To Home</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/task">← See your list</a>
+        <a class="nav-link" href="/task">See your list</a>
       </li>
     </ul>
 </nav>
 <footer>
-<a href="/">Back To Home</a> | 
-<a href="/addTask">Add a Task</a>  
 </footer>
 
 
