--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 {{!-- <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet"> --}}
 
 {{!-- css stylesheet --}}
-  <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
+  {{!-- <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8"> --}}
 
  {{!-- jquery --}}
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
