modified home styling and views styling

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -33,7 +33,8 @@
     <div class="box1">
       <h3 class="content-title">Add a task, set a date and no more hassle in organizing your workflow.
 Keep all the tasks in one place with no paper cuts. View them at any time.
-When you are done just... CheckIt!</h3>
+When you are done just...</h3>
+<h3>CheckIt!</h3>
  
       <p></p>
     </div>
