--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,4 +1,3 @@
-
 <div id="home"></div>
 
 {{!-- NAV BAR --}}
@@ -31,9 +30,7 @@
   <section id="section-d" class="grid">
 
     <div class="box1">
-      <h3 class="content-title">Log in, add a tack, set a date and no more hassle in organizing your workflow.
-Keep all the tasks in one place with no paper cuts. View them at any time.
-And when you are done just CheckIt!</h3>
+      <h3 align="center"class="content-title">Sign In</h3>
  
       <p></p>
     </div>
@@ -41,29 +38,25 @@ And when you are done just CheckIt!</h3>
      <div class="box2">
       <h3 class="content-title"></h3>
 
-<form action='/api/user' method="POST">
+<form action='/api/login_data' method="POST">
 <div class="form-group">
 
-   <div class="input">
-    <input name="username" class="col-md-8 mb-3" id="username" placeholder="Username">
+   <div align="center" class="input">
+    <input name="userName" class="col-md-8 mb-3" id="username" placeholder="Username">
     </div>
 
-   <div class="input">
-    <input name="password" type="password" class="col-md-8 mb-3" id="password" placeholder="Password">
+   <div align="center" class="input">
+    <input name="userPassword" type="password" class="col-md-8 mb-3" id="password" placeholder="Password" >
      </div>
-
-    <div class="input">
-    <input name="url_img" class="col-md-8 mb-3"id="url-img" placeholder="URL">
-    </div>
-
-    <button type="submit" class="btn btn1 col-md-8 mb-3">Sign Up</button>
-
+<div align="center">
+    <button  type="submit" class="btn btn1 col-md-8 mb-3">Log In</button>
+</div>
 
 
   </div>
 
   </form>
-<a href="/signin"><button  class="btn btn2 col-md-8 mb-3">Log In</button></a>
+
     </div>
 
   </section>
@@ -74,8 +67,6 @@ And when you are done just CheckIt!</h3>
 {{!-- FOOTER --}}
 
 
-<footer id="main-footer" class="grid">
-<p> Copyright &copy; 2019: Legendary App</p>
-</footer>
+
 
 
