--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -1,3 +1,6 @@
+{{!-- code not currently in use save for future --}}
+
+
 <div class="container">
   <div class="row">
     <div class="col-8 offset-2">
