--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 
-<div id="home"></div>
+<div id="home">
 
 {{!-- NAV BAR --}}
 
@@ -12,7 +12,7 @@
   
   <a class="nav-link" href="/addTask"><i data-eva="plus-circle-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i></a>
 
-  <a class="nav-link" href="/task"><i data-eva="calendar-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i></a>
+  <a class="nav-link mr-sm-2" href="/task"><i data-eva="calendar-outline" data-eva-fill="black" data-eva-height="48" data-eva-width="48"></i></a>
 
 </div>
 
@@ -79,4 +79,4 @@ When you are done just...</h3>
 <p> Copyright &copy; 2019: Legendary App</p>
 </footer>
 
-
+</div>
