--- a/views/addForm.handlebars
+++ b/views/addForm.handlebars
@@ -5,74 +5,70 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarNav">
 
     <ul class="navbar-nav">
-
-
       <li class="nav-item">
-        <a class="nav-link" href="/addTask">Create Your List</a>
+        <a class="nav-link" href="/addTask">Create List</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/task">Go To Your List</a>
+        <a class="nav-link" href="/task">To List</a>
       </li>
-
     </ul>
   </div>
 </nav>
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-
-
-        {{!-- NAVBAR --}}
-
-<div class="container">
-
+        <div class="container formAdd">
+          <form class="clearfix mb-4" action="/api/tasks" method='POST'>
+            <div class="form-group">
+              <label for="author-name">Name</label>
+              <input name='name' type="text" id="name-text" class="form-control" aria-describedby="example-text" placeholder="Your Name Here...">
+            </div>
+            <div class="form-group">
+              <label for="category">Category</label>
+              <input name='type'class="form-control" id="category-description" aria-describedby="example-description" placeholder="Enter Category for your task...">
+            </div>
+              <div class="form-group">
+              <label for="example-description">Task Name</label>
+              <input name='title'class="form-control" id="title-description" aria-describedby="example-description" placeholder="Enter Title...">
+            </div>
+              <div class="form-group">
+              <label for="to-do-description">Task Description</label>
+              <textarea name='description'class="form-control" id="task-description" aria-describedby="example-description" placeholder="Describe Your Task..."></textarea>
+            </div>
+              <div class="form-group">
+              <label for="due-date-description">Due Date</label>
+              <input type="date" name='due'class="form-control" id="date-description" aria-describedby="example-description" placeholder="Enter Task Due Date...">
+            </div>
+            <button id="submit" class="btn btn-primary float-right">Submit</button>
+          </form>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
         
-  <form class="clearfix mb-4" action="/api/tasks" method='POST'>
-    <div class="form-group">
-      <label for="author-name">Name</label>
-      <input name='name' type="text" id="name-text" class="form-control" aria-describedby="example-text" placeholder="Your Name Here...">
-    </div>
-    <div class="form-group">
-      <label for="category">Category</label>
-      <input name='type'class="form-control" id="category-description" aria-describedby="example-description" placeholder="Enter Category for your task...">
-    </div>
-      <div class="form-group">
-      <label for="example-description">Task Name</label>
-      <input name='title'class="form-control" id="title-description" aria-describedby="example-description" placeholder="Enter Title...">
-    </div>
-      <div class="form-group">
-      <label for="to-do-description">Task Description</label>
-      <textarea name='description'class="form-control" id="task-description" aria-describedby="example-description" placeholder="Describe Your Task..."></textarea>
-    </div>
-      <div class="form-group">
-      <label for="due-date-description">Due Date</label>
-      <input type="date" name='due'class="form-control" id="date-description" aria-describedby="example-description" placeholder="Enter Task Due Date...">
-    </div>
-    <button id="submit" class="btn btn-primary float-right">Submit</button>
-  </form>
 
 
-
-{{!-- BOTTOM --}}
-<nav class="navbar navbar-expand-lg fixed-bottom navbar-light">
+<footer>
+  {{!-- STICKY BOTTOM --}}
+<div class="navbar navbar-expand-lg fixed-bottom navbar-light">
   {{!-- <a class="navbar-brand" href="#">Fixed bottom</a> --}}
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/">Back To Home</a>
+        <a class="nav-link" href="/">Home</a>
+      </li>
+
+       <li class="nav-item">
+        <a class="nav-link" href="/addTask">Create List</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/task">See your list</a>
+        <a class="nav-link" href="/task">To List</a>
       </li>
     </ul>
 </nav>
-</div>
-</div>
-<footer>
 </footer>
