--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,9 @@
+<style>
+#task-list {
+  list-style-image: none;
+ }
+</style>
+
 <div id="List">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/"><h2>Check It!</h2></a>
@@ -12,11 +18,11 @@
 
 
       <li class="nav-item">
-        <a class="nav-link" href="/addTask">Create Your List</a>
+        <a class="nav-link" href="/addTask">Create List</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/task">Go To Your List</a>
+        <a class="nav-link" href="/task">To List</a>
       </li>
 
     </ul>
@@ -26,23 +32,23 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <hr>
+
         <h3>My Task List:</h3>
         {{#each toDoList}}
           <div class="card" style="">
             <div class="card-body" data-id="{{id}}">
-              {{!-- <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> --}}
-                <ul id="task-list" class="list-group">
-                <li>{{name}}</li>
-                <li>{{type}}</li>
-                <li>{{title}}</li>
-                <li>{{description}}</li>
-                <li>{{due}}</li>
-                <button id="{{id}}" type="button" class="btn btn-danger delete">X</button>
+
+                <ul class="list-group" id="task-list">
+                <li class="list-group-item">Name: {{name}}</li>
+                <li class="list-group-item">Type: {{type}}</li>
+                <li class="list-group-item">Title: {{title}}</li>
+                <li class="list-group-item">Description: {{description}}</li>
+                <li class="list-group-item">Due: {{due}}</li>
+                <br>
+                <button id="{{id}}" type="button" class="btn btn-outline-primary complete">&#10003</button>
+                <button id="{{id}}" type="button" class="btn btn-outline-danger delete">X</button>
               </ul>
-              {{!-- <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a> --}}
+           
             </div>
           </div>
         {{/each}}
@@ -56,11 +62,15 @@
   {{!-- <a class="navbar-brand" href="#">Fixed bottom</a> --}}
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/">Back To Home</a>
+        <a class="nav-link" href="/">Home</a>
+      </li>
+
+       <li class="nav-item">
+        <a class="nav-link" href="/addTask">Create List</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/task">See your list</a>
+        <a class="nav-link" href="/task">To List</a>
       </li>
     </ul>
 </nav>
