--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,6 +39,8 @@
 
 
 <body>
+<div  class=wrap>
+
 
   {{{body}}}
   
@@ -50,7 +52,7 @@
 </footer>
   <!-- Custom Script -->
 <script src="js/index.js" type="text/javascript"></script>
-
+</div>
 </body>
 
 
